increased padding to fix alignment

--- a/src/components/WorkStyle/styles.css
+++ b/src/components/WorkStyle/styles.css
@@ -14,15 +14,15 @@
 }
 
 .showcase-row__heading {
-  padding-left: 15%;
-  padding-right: 15%;
+  padding-left: 25%;
+  padding-right: 25%;
 }
 
 .image-container {
   width: 100%;
   height: 100%;
   display: none;
-  
+
   background-size: cover;
 }
 
